--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
     "display": "fullscreen",
     "icons": [{
       "src": "icon.png",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "256x256"
     }]
   }
